--- a/EDDA2_tim.Rmd
+++ b/EDDA2_tim.Rmd
@@ -53,8 +53,7 @@ expend_bad_lm = lm(expend ~ bad, data=expenses)
 plot(residuals(expend_bad_lm), expenses$bad)
 ```
 
-To check the assumptions the residuals should look normal and their spread should not vary with the
-fitted values.
+To check the assumptions the residuals should look normal and their spread should not vary with the fitted values.
 
 ```{r}
 qqnorm(residuals(expend_bad_lm))
@@ -156,6 +155,8 @@ newdata <- data.frame(bad = 50, crime = 5000, lawyers = 5000, employ = 5000, pop
 pred <- predict(step_up, newdata, interval = "prediction", level = 0.95)
 ```
 
+QUESTION CAN I IMPROVE THIS INTERVAL
+
 ### Apply the LASSO method to choose the relevant variables (with default parameters as in the lecture and *lambda*=*lambda.1se*). (You will need to install the R-package *glmnet*, which is not included in the standard distribution of R.) Compare the resulting model with the model obtained in b). (Beware that in general a new run delivers a new model because of a new train set.)
 
 ```{r}
@@ -183,6 +184,6 @@ plot(lasso_mod, label=T, xvar="lambda")
 lambda_min = lasso.cv$lambda.min; lambda_1se = lasso.cv$lambda.1se
 coef(lasso.model, s=lasso.cv$lambda.min) 
 y.pred=predict(lasso.model,s=lambda.min,newx=x.test) 
-# calculate MSE
+# calculate MSEs
 mse.lasso=mean((y.test-y.pred)^2)
 ```
