--- a/EDDA2_tim.Rmd
+++ b/EDDA2_tim.Rmd
@@ -9,7 +9,7 @@ highlight: tango
 
 # Exercise 2: **Expenditure on criminal activities**
 
-### The data in [expensescrime.txt](https://canvas.vu.nl/courses/68030/files/6051345?wrap=1 "expensescrime.txt")were obtained to determine factors related to state expenditures on criminal activities (courts, police, etc.) The variables are: *state* (indicating the state in the USA), *expend* (state expenditures on criminal activities in \$1000), *bad* (crime rate per 100000), *crime* (number of persons under criminal supervision), *lawyers* (number of lawyers in the state), *employ* (number of persons employed in the state) and *pop* (population of the state in 1000). In the regression analysis, take *expend* as response variable and *bad*, *crime*, *lawyers*, *employ* and *pop* as explanatory variables.
+### The data in [expensescrime.txt](https://canvas.vu.nl/courses/68030/files/6051345?wrap=1 "expensescrime.txt") were obtained to determine factors related to state expenditures on criminal activities (courts, police, etc.) The variables are: *state* (indicating the state in the USA), *expend* (state expenditures on criminal activities in \$1000), *bad* (crime rate per 100000), *crime* (number of persons under criminal supervision), *lawyers* (number of lawyers in the state), *employ* (number of persons employed in the state) and *pop* (population of the state in 1000). In the regression analysis, take *expend* as response variable and *bad*, *crime*, *lawyers*, *employ* and *pop* as explanatory variables.
 
 ## A
 
@@ -69,11 +69,7 @@ influence = influence.measures(model)
 influence
 ```
 
-```{r}
-plot(influence$c, pch = 20, main = "Cook's Distance")
-```
-
-For each observation, the Cook's distance was used to investigated the problem of influential points. Points with high Cook's distance are potential influence points.
+For each observation, the Cook's distance was used to investigated the problem of influential points. Points with a Cook's distance larger than 1 are considered to be influence points.
 
 ```{r}
 dist = cooks.distance(model)
@@ -84,7 +80,7 @@ dist
 plot(dist, pch = 19, type="b", xlab = "Observation", ylab = "Cook's Distance", main = "Cook's Distances")
 ```
 
-### Investigate the problem of collinearity.
+### Investigate the problem of collinearity
 
 Collinearity is the problem of linear relations between explanatory variables. The correlation matrix of the independent variables was calculated to investigate the issue.
 
@@ -138,26 +134,36 @@ The variable bad is added to the model with
     Multiple R-squared:  0.9639
 
 ```{r}
- summary(lm(expend ~ employ + lawyers + bad, data=expenses))
-
+summary(lm(expend ~ employ + lawyers + bad + crime, data=expenses))
+summary(lm(expend ~ employ + lawyers + bad + pop, data=expenses))
 ```
+
+The variable pop is added to the model with
+
+    Adjusted R-squared:  0.9637 
 
 CONTINUE HERE
 
 ```{r}
-step_up = 
+step_up = (lm(expend ~ employ + lawyers + bad + pop + crime, data=expenses))
+summary(step_up)
 ```
 
-### Determine a 95% prediction interval for the *expend* using the model you preferred in b) for a (hypothetical) state with *bad*=50, *crime*=5000, *lawyers*=5000, *employ*=5000 and *pop*=5000. Can you improve this interval?
+The final step-up model contains all explanatory variables. However, when there is collinearity among the explanatory variables, one should actually avoid having two collinear explanatory variables in the model. This is something to keep in mind when tweaking the model further.
+
+### Determine a 95% prediction interval for the *expend* using the model you preferred in b) for a (hypothetical) state with *bad*=50, *crime*=5000, *lawyers*=5000, *employ*=5000 and *pop*=5000.
 
 ```{r}
 newdata <- data.frame(bad = 50, crime = 5000, lawyers = 5000, employ = 5000, pop = 5000)
 pred <- predict(step_up, newdata, interval = "prediction", level = 0.95)
+pred
 ```
 
-QUESTION CAN I IMPROVE THIS INTERVAL
+### Can you improve this interval?
 
-### Apply the LASSO method to choose the relevant variables (with default parameters as in the lecture and *lambda*=*lambda.1se*). (You will need to install the R-package *glmnet*, which is not included in the standard distribution of R.) Compare the resulting model with the model obtained in b). (Beware that in general a new run delivers a new model because of a new train set.)
+### Apply the LASSO method to choose the relevant variables (with default parameters as in the lecture and *lambda*=*lambda.1se*)
+
+Lasso automatically shrink the coefficients of the insignificant variables or sets them to zero altogether.
 
 ```{r}
 library(glmnet)
@@ -174,16 +180,25 @@ indep_vars = c("bad", "crime", "lawyers", "employ", "pop")
 x_train = train_data[indep_vars]
 y_train = train_data$expend
 
-
+x_train = data.matrix(x_train)
 lasso_mod = glmnet(x_train, y_train, alpha = 1)
-cv_lasso = cv.glmnet(x_train, y_train, alpha=1, type.measure="mse")
 plot(lasso_mod, label=T, xvar="lambda")
+cv_lasso = cv.glmnet(x_train, y_train, alpha=1, type.measure="mse")
 ```
+
+The model coefficients of the relevant variables selected by the LASSO model are shown below:
 
 ```{r}
-lambda_min = lasso.cv$lambda.min; lambda_1se = lasso.cv$lambda.1se
-coef(lasso.model, s=lasso.cv$lambda.min) 
-y.pred=predict(lasso.model,s=lambda.min,newx=x.test) 
-# calculate MSEs
+lambda_min = cv_lasso$lambda_min
+lambda_1se = cv_lasso$lambda.1se
+coef(lasso_mod, s=cv_lasso$lambda_min)
+```
+
+Variables with coefficients close to zero indicates that these were not deemed relevant for predicting expenditure by the LASSO algorithm.
+
+```{r}
+y.pred=predict(lasso_mod, s=lambda_min, newx = x.test) 
 mse.lasso=mean((y.test-y.pred)^2)
 ```
+
+### Compare the resulting model with the model obtained in b)
